[project]
name = "wikipedia-cosmograph-force-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "cosmograph>=0.5.3",
    "ipykernel>=7.2.0",
    "marimo>=0.22.0",
    "pandas>=3.0.2",
    "polars>=1.39.3",
    "pyarrow>=23.0.1",
    "requests>=2.33.1",
]
